# TilEm-Qml

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  README  README.md  TilEm.desktop  init.sh  manifest.json
app/: CMakeLists.txt  CalcPage.qml  FolderPage.qml  TilEm-hub.json  TilEm.desktop  TilEm.qml  TilEm.url-dispatcher  manifest.json  manifest.json.cmake
backend/modules/: CMakeLists.txt
backend/modules/TilEm/: CMakeLists.txt  calc.cpp  calc.h  calcscreen.cpp  calcthread.cpp  calcthread.h  settings.cpp  settings.h  skin.cpp  skin.h  skinimage.cpp  skinops.c
cmake/Modules/: CLICKInstallDirs.cmake  QtCreatorResources.cmake  ResolveLibs.cmake
data/: CMakeLists.txt
